Demo code for FormDialog, Intents and Entities.

--- a/AzureThursdays.Chatbots.Demo/AzureThursdays.Chatbots.Demo/AzureThursdays.Chatbots.Demo.csproj
+++ b/AzureThursdays.Chatbots.Demo/AzureThursdays.Chatbots.Demo/AzureThursdays.Chatbots.Demo.csproj
@@ -113,10 +113,13 @@
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\MessagesController.cs" />
+    <Compile Include="Dialogs\RootLuisDialog.cs" />
     <Compile Include="Dialogs\RootDialog.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\PizzaSize.cs" />
+    <Compile Include="Models\Pizza.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
